# engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini
core/: CMakeLists.txt
core/src/: test.cpp  test.hpp
engine/: CMakeLists.txt
engine/include/: jc2d.h
engine/include/engine/: asserts.h  logger.h
engine/include/engine/core/: application.h  engine.h  logger.h
engine/src/: EntryPoint.h  asserts.h  defines.h  entry_point.h  jc2dpch.h  key_codes.h  mouse_button_codes.h  test.cpp  uuid.h
engine/src/core/: application.cpp  application.h  asserts.h  engine.cpp  engine.h  input.cpp  input.h  logger.cpp  logger.h  metrics.cpp  metrics.h  window.h
engine/src/core/event/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h  application_event.h  event.h  key_event.h  mouse_event.h
engine/src/core/imgui/: debug_menu.cpp  debug_menu.h  imgui_layer.cpp  imgui_layer.h
engine/src/core/layer/: layer.cpp  layer.h  layerStack.cpp  layerStack.h  layer_stack.cpp  layer_stack.h
engine/src/core/logger/: logger.cpp  logger.h
engine/src/core/render/: buffers.cpp  buffers.h  debug_render_layer.cpp  debug_render_layer.h  renderer.cpp  renderer.h  vertex_array.cpp  vertex_array.h
engine/src/core/render/camera/: camera.cpp  camera.h
engine/src/core/render/shaders/: shader.cpp  shader.h
engine/src/core/resource/: image.cpp  image.h  image_loader.cpp  image_loader.h  loader.h  resource.h  resource_manager.cpp  resource_manager.h
engine/src/core/resource/image/: image_loader.h  image_resource.h
engine/src/core/window/: window.cpp  window.h
engine/src/platform/linux/: linux_window.cpp  linux_window.h
engine/src/shaders/sample/: sample.vert
src/: glad.c  main.cpp  test.cpp  test.hpp
testbed/: CMakeLists.txt
testbed/src/: main.cpp
